@@ -10,6 +10,8 @@ glibc (2.3.6-7) UNRELEASED; urgency=low
     noticing me.
   * Add m68k/local-mathinline_h.diff (fix bits/mathinline.h), by Roger Leigh.
     (Closes: #340871)
+  * Add beginning and end timestamps to both the build logs and the
+    testsuite logs.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 11 Apr 2006 00:54:26 +0200
 
